--- a/pom.xml
+++ b/pom.xml
@@ -105,9 +105,20 @@
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
             <version>2.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
 
 
-   </dependencies>
+
+    </dependencies>
 
    <build>
        <plugins>
